--- a/ChesterTourist/index.html
+++ b/ChesterTourist/index.html
@@ -46,9 +46,9 @@
                 <div class="col-12">
                     <div class="topnav" id="myTopnav">
                       <a href="index.html">Home</a>
-                        <a href="#news">Book</a>
-                        <a href="#contact">Discover</a>
-                        <a href="#contact">Facts</a>
+                        <a href="#">Book</a>
+                        <a href="#">Discover</a>
+                        <a href="#">Facts</a>
                         <a href="contact.html">Contact Us</a>
                         <a href="javascript:void(0);" style="font-size:20px;" class="icon" onclick="myFunction()">&#9776;</a>
                         <img id="logo" src="images/CTlogo.png" style="height:100px; float:right;">
@@ -204,7 +204,7 @@ You can find more information <a href="https://en.wikipedia.org/wiki/Chester" ta
 // });
 
 </script>
-
+<script src="js/js.js"></script>
     </body>
 
 </html>
