Transition on hover, border radius on a links

--- a/ChesterTourist/contact.html
+++ b/ChesterTourist/contact.html
@@ -51,8 +51,7 @@
                 <div class="col-12">
                     <div class="topnav" id="myTopnav">
                       <a href="index.html">Home</a>
-                        <a href="#news">Book</a>
-                        <a href="#contact">Discover</a>
+                        <a href="discover.html">Discover</a>
                         <a href="#contact">Facts</a>
                         <a href="contact.html">Contact Us</a>
                         <a href="javascript:void(0);" style="font-size:20px;" class="icon" onclick="myFunction()">&#9776;</a>
@@ -96,7 +95,7 @@
  </div>
     <!-- CLOSING CONTAINER -->
     <div class="container-fluid">
-    <div class="row">
+    <div class="row clearfix">
             <div class="contact-form">
                 <div class="form">
                     <div class="form-style-6">
