--- a/ChesterTourist/activities.html
+++ b/ChesterTourist/activities.html
@@ -47,8 +47,7 @@
                 <div class="col-12">
                     <div class="topnav" id="myTopnav">
                       <a href="index.html">Home</a>
-                        <a href="#news">Book</a>
-                        <a href="#contact">Discover</a>
+                        <a href="discover.html">Discover</a>
                         <a href="#contact">Facts</a>
                         <a href="contact.html">Contact Us</a>
                         <a href="javascript:void(0);" style="font-size:20px;" class="icon" onclick="myFunction()">&#9776;</a>
