--- a/ChesterTourist/index.html
+++ b/ChesterTourist/index.html
@@ -46,8 +46,7 @@
                 <div class="col-12">
                     <div class="topnav" id="myTopnav">
                       <a href="index.html">Home</a>
-                        <a href="#">Book</a>
-                        <a href="#">Discover</a>
+                        <a href="discover.html">Discover</a>
                         <a href="#">Facts</a>
                         <a href="contact.html">Contact Us</a>
                         <a href="javascript:void(0);" style="font-size:20px;" class="icon" onclick="myFunction()">&#9776;</a>
