Animation College Done

--- a/Animationcollege/Assignment5/assignment5.html
+++ b/Animationcollege/Assignment5/assignment5.html
@@ -11,11 +11,11 @@
     <title>Erind Hoxha - Get Work Done</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
     <!-- Custom styles for this template -->
-    <link href="css/3-col-portfolio.css" rel="stylesheet">
+    <link href="../../css/3-col-portfolio.css" rel="stylesheet">
 
   </head>
 
@@ -28,7 +28,7 @@
 
             <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top light-navbar-fixed-top">
                     <div class="container-fluid">
-                      <a class="navbar-brand" href="index.html">Home</a>
+                      <a class="navbar-brand" href="../animationcollege.html">Home</a>
                       <button class="navbar-toggler custom-toggler-light" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon custom-toggler-light"></span>
                       </button>
@@ -59,48 +59,48 @@
      
   <div class="row"  id="skill-images">
     <div class="col-sm-3 col-md-2 col-lg-1 img-logo hvr-grow">
-      <img style="width:100%;" class="img-skills" src="img/html-logo.png">
+      <img style="width:100%;" class="img-skills" src="../../img/html-logo.png">
     </div>
     <div class="col-sm-3 col-md-2 col-lg-1 img-logo hvr-grow">
-        <img style="width:100%;" class="img-skills" src="img/csslogo.png">
+        <img style="width:100%;" class="img-skills" src="../../img/csslogo.png">
     </div>
 
     <div class="col-sm-3 col-md-2 col-lg-1 img-logo hvr-grow">
-      <img style="width:100%" class="img-skills" src="img/javascript-logo.png">
+      <img style="width:100%" class="img-skills" src="../../img/javascript-logo.png">
   </div>
 
   <div class="col-sm-3 col-md-2 col-lg-1 img-logo hvr-grow">
-    <img style="width:100%;" class="img-skills" src="img/jquery-logo.png">
+    <img style="width:100%;" class="img-skills" src="../../img/jquery-logo.png">
 </div>
 
     <div class="col-sm-3 col-md-2 col-lg-1 img-logo hvr-grow">
-      <img style="width:100%;" class="img-skills" src="img/bootstrap-logo.png">
+      <img style="width:100%;" class="img-skills" src="../../img/bootstrap-logo.png">
   </div>
 
   <div class="col-sm-3 col-md-2 col-lg-1 img-logo hvr-grow">
-    <img style="width:100%;" class="img-skills" src="img/git.png">
+    <img style="width:100%;" class="img-skills" src="../../img/git.png">
 </div>
 
 <div class="col-sm-3 col-md-2 col-lg-1 img-logo hvr-grow">
-    <img style="width:100%;" class="img-skills" src="img/sass-logo.png">
+    <img style="width:100%;" class="img-skills" src="../../img/sass-logo.png">
 </div>
 
 <div class="col-sm-3 col-md-2 col-lg-1 img-logo hvr-grow">
-    <img style="width:100%;" class="img-skills" src="img/photoshop-logo.png">
+    <img style="width:100%;" class="img-skills" src="../../img/photoshop-logo.png">
 </div>
 
 <div class="col-sm-3 col-md-2 col-lg-1 img-logo hvr-grow">
-    <img style="width:100%;" class="img-skills" src="img/sketch-logo.png">
+    <img style="width:100%;" class="img-skills" src="../../img/sketch-logo.png">
 </div>
 
 <div class="col-sm-3 col-md-2 col-lg-1 img-logo hvr-grow">
-    <img style="width:100%;" class="img-skills" src="img/illustrator-logo.png">
+    <img style="width:100%;" class="img-skills" src="../../img/illustrator-logo.png">
 </div>
 <div class="col-sm-3 col-md-2 col-lg-1 img-logo hvr-grow">
-    <img style="width:100%;" class="img-skills" src="img/premiere-pro.png">
+    <img style="width:100%;" class="img-skills" src="../../img/premiere-pro.png">
 </div>
 <div class="col-sm-3 col-md-2 col-lg-1 img-logo hvr-grow">
-    <img style="width:100%;" class="img-skills" src="img/aftereffects-logo.png">
+    <img style="width:100%;" class="img-skills" src="../../img/aftereffects-logo.png">
 </div>
 <!-- PAGE CONTENT -->
 
@@ -116,88 +116,88 @@
 
 
     <div class="col-lg-4 col-md-4 col-sm-6 col-12">
-            <a href="Animationcollege/Assignment5/EHoxha_presentation-1.png" data-toggle="lightbox" data-gallery="example-gallery" class="col-sm-4 col-4 mt-4">
-                <img src="Animationcollege/Assignment5/EHoxha_presentation-1.png" class="img-fluid hvr-float mt-4">
+            <a href="../Assignment5/EHoxha_presentation-1.png" data-toggle="lightbox" data-gallery="example-gallery" class="col-sm-4 col-4 mt-4">
+                <img src="../Assignment5/EHoxha_presentation-1.png" class="img-fluid hvr-float mt-4">
             </a>
             </div>
 
             <div class="col-lg-4 col-md-4 col-sm-6 col-12">
-                    <a href="Animationcollege/Assignment5/EHoxha_presentation-2.png" data-toggle="lightbox" data-gallery="example-gallery" class="col-sm-4 col-4 mt-4">
-                        <img src="Animationcollege/Assignment5/EHoxha_presentation-2.png" class="img-fluid hvr-float mt-4">
+                    <a href="../Assignment5/EHoxha_presentation-2.png" data-toggle="lightbox" data-gallery="example-gallery" class="col-sm-4 col-4 mt-4">
+                        <img src="../Assignment5/EHoxha_presentation-2.png" class="img-fluid hvr-float mt-4">
                     </a>
                     </div>
 
                     <div class="col-lg-4 col-md-4 col-sm-6 col-12">
-                            <a href="Animationcollege/Assignment5/EHoxha_presentation-3.png" data-toggle="lightbox" data-gallery="example-gallery" class="col-sm-4 col-4 mt-4">
-                                <img src="Animationcollege/Assignment5/EHoxha_presentation-3.png" class="img-fluid hvr-float mt-4">
+                            <a href="../Assignment5/EHoxha_presentation-3.png" data-toggle="lightbox" data-gallery="example-gallery" class="col-sm-4 col-4 mt-4">
+                                <img src="../Assignment5/EHoxha_presentation-3.png" class="img-fluid hvr-float mt-4">
                             </a>
                             </div>
         
 
         <div class="col-lg-4 col-md-4 col-sm-6 col-12">
-            <a href="Animationcollege/Assignment5/EHoxha_presentation-4.png" data-toggle="lightbox" data-gallery="example-gallery" class="col-sm-4 col-4 mt-4">
-                <img src="Animationcollege/Assignment5/EHoxha_presentation-4.png" class="img-fluid hvr-float mt-4">
+            <a href="../Assignment5/EHoxha_presentation-4.png" data-toggle="lightbox" data-gallery="example-gallery" class="col-sm-4 col-4 mt-4">
+                <img src="../Assignment5/EHoxha_presentation-4.png" class="img-fluid hvr-float mt-4">
             </a>
             </div>
 
     <div class="col-lg-4 col-md-4 col-sm-6 col-12">
-            <a href="Animationcollege/Assignment5/EHoxha_presentation-5.png" data-toggle="lightbox" data-gallery="example-gallery" class="col-sm-4 col-4 mt-4">
-                <img src="Animationcollege/Assignment5/EHoxha_presentation-5.png" class="img-fluid hvr-float mt-4">
+            <a href="../Assignment5/EHoxha_presentation-5.png" data-toggle="lightbox" data-gallery="example-gallery" class="col-sm-4 col-4 mt-4">
+                <img src="../Assignment5/EHoxha_presentation-5.png" class="img-fluid hvr-float mt-4">
             </a>
             </div>
 
 <div class="col-lg-4 col-md-4 col-sm-6 col-12">
-        <a href="Animationcollege/Assignment5/EHoxha_presentation-6.png" data-toggle="lightbox" data-gallery="example-gallery" class="col-sm-4 col-4 mt-4">
-            <img src="Animationcollege/Assignment5/EHoxha_presentation-6.png" class="img-fluid hvr-float mt-4">
+        <a href="../Assignment5/EHoxha_presentation-6.png" data-toggle="lightbox" data-gallery="example-gallery" class="col-sm-4 col-4 mt-4">
+            <img src="../Assignment5/EHoxha_presentation-6.png" class="img-fluid hvr-float mt-4">
         </a>
         </div>
 
         <div class="col-lg-4 col-md-4 col-sm-6 col-12">
-                <a href="Animationcollege/Assignment5/EHoxha_presentation-7.png" data-toggle="lightbox" data-gallery="example-gallery" class="col-sm-4 col-4 mt-4">
-                    <img src="Animationcollege/Assignment5/EHoxha_presentation-7.png" class="img-fluid hvr-float mt-4">
+                <a href="../Assignment5/EHoxha_presentation-7.png" data-toggle="lightbox" data-gallery="example-gallery" class="col-sm-4 col-4 mt-4">
+                    <img src="../Assignment5/EHoxha_presentation-7.png" class="img-fluid hvr-float mt-4">
                 </a>
                 </div>
 
     <div class="col-lg-4 col-md-4 col-sm-6 col-12">
-            <a href="Animationcollege/Assignment5/EHoxha_presentation-14.png" data-toggle="lightbox" data-gallery="example-gallery" class="col-sm-4 col-4 mt-4">
-                <img src="Animationcollege/Assignment5/EHoxha_presentation-14.png" class="img-fluid hvr-float mt-4">
+            <a href="../Assignment5/EHoxha_presentation-14.png" data-toggle="lightbox" data-gallery="example-gallery" class="col-sm-4 col-4 mt-4">
+                <img src="../Assignment5/EHoxha_presentation-14.png" class="img-fluid hvr-float mt-4">
             </a>
             </div>
 
             <div class="col-lg-4 col-md-4 col-sm-6 col-12">
-                    <a href="Animationcollege/Assignment5/EHoxha_presentation-15.png" data-toggle="lightbox" data-gallery="example-gallery" class="col-sm-4 col-4 mt-4">
-                        <img src="Animationcollege/Assignment5/EHoxha_presentation-15.png" class="img-fluid hvr-float mt-4">
+                    <a href="../Assignment5/EHoxha_presentation-15.png" data-toggle="lightbox" data-gallery="example-gallery" class="col-sm-4 col-4 mt-4">
+                        <img src="../Assignment5/EHoxha_presentation-15.png" class="img-fluid hvr-float mt-4">
                     </a>
                     </div>
             <!-- 1 -->
 
             <div class="col-lg-4 col-md-4 col-sm-6 col-12">
-                    <a href="Animationcollege/Assignment5/EHoxha_presentation-16.png" data-toggle="lightbox" data-gallery="example-gallery" class="col-sm-4 col-4 mt-4">
-                        <img src="Animationcollege/Assignment5/EHoxha_presentation-16.png" class="img-fluid hvr-float mt-4 mb-4">
+                    <a href="../Assignment5/EHoxha_presentation-16.png" data-toggle="lightbox" data-gallery="example-gallery" class="col-sm-4 col-4 mt-4">
+                        <img src="../Assignment5/EHoxha_presentation-16.png" class="img-fluid hvr-float mt-4 mb-4">
                     </a>
                     </div>
 
                     <div class="col-lg-4 col-md-4 col-sm-6 col-12">
-                        <a href="Animationcollege/Assignment5/EHoxha_presentation-17.png" data-toggle="lightbox" data-gallery="example-gallery" class="col-sm-4 col-4 mt-4">
-                            <img src="Animationcollege/Assignment5/EHoxha_presentation-17.png" class="img-fluid hvr-float mt-4 mb-4">
+                        <a href="../Assignment5/EHoxha_presentation-17.png" data-toggle="lightbox" data-gallery="example-gallery" class="col-sm-4 col-4 mt-4">
+                            <img src="../Assignment5/EHoxha_presentation-17.png" class="img-fluid hvr-float mt-4 mb-4">
                         </a>
                         </div>
 
                         <div class="col-lg-4 col-md-4 col-sm-6 col-12">
-                            <a href="Animationcollege/Assignment5/EHoxha_presentation-18.png" data-toggle="lightbox" data-gallery="example-gallery" class="col-sm-4 col-4 mt-4">
-                                <img src="Animationcollege/Assignment5/EHoxha_presentation-18.png" class="img-fluid hvr-float mt-4 mb-4">
+                            <a href="../Assignment5/EHoxha_presentation-18.png" data-toggle="lightbox" data-gallery="example-gallery" class="col-sm-4 col-4 mt-4">
+                                <img src="../Assignment5/EHoxha_presentation-18.png" class="img-fluid hvr-float mt-4 mb-4">
                             </a>
                             </div>
 
                             <div class="col-lg-4 col-md-4 col-sm-6 col-12">
-                                <a href="Animationcollege/Assignment5/EHoxha_presentation-19.png" data-toggle="lightbox" data-gallery="example-gallery" class="col-sm-4 col-4 mt-4">
-                                    <img src="Animationcollege/Assignment5/EHoxha_presentation-19.png" class="img-fluid hvr-float mt-4 mb-4">
+                                <a href="../Assignment5/EHoxha_presentation-19.png" data-toggle="lightbox" data-gallery="example-gallery" class="col-sm-4 col-4 mt-4">
+                                    <img src="../Assignment5/EHoxha_presentation-19.png" class="img-fluid hvr-float mt-4 mb-4">
                                 </a>
                                 </div>
 
                                 <div class="col-lg-4 col-md-4 col-sm-6 col-12">
-                                    <a href="Animationcollege/Assignment5/EHoxha_presentation-20.png" data-toggle="lightbox" data-gallery="example-gallery" class="col-sm-4 col-4 mt-4">
-                                        <img src="Animationcollege/Assignment5/EHoxha_presentation-20.png" class="img-fluid hvr-float mt-4 mb-4">
+                                    <a href="../Assignment5/EHoxha_presentation-20.png" data-toggle="lightbox" data-gallery="example-gallery" class="col-sm-4 col-4 mt-4">
+                                        <img src="../Assignment5/EHoxha_presentation-20.png" class="img-fluid hvr-float mt-4 mb-4">
                                     </a>
                                     </div>
 
@@ -251,9 +251,9 @@
     </footer>
 
     <!-- Bootstrap core JavaScript -->
-    <script src="vendor/js/js.js"></script>    
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="../../vendor/js/js.js"></script>    
+    <script src="../../vendor/jquery/jquery.min.js"></script>
+    <script src="../../vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.js" integrity="sha256-jGAkJO3hvqIDc4nIY1sfh/FPbV+UK+1N+xJJg6zzr7A=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.min.js" integrity="sha256-Y1rRlwTzT5K5hhCBfAFWABD4cU13QGuRN6P5apfWzVs=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.min.js" integrity="sha256-Y1rRlwTzT5K5hhCBfAFWABD4cU13QGuRN6P5apfWzVs=" crossorigin="anonymous"></script>
@@ -264,7 +264,7 @@
       $(this).ekkoLightbox();
   });
 </script>
-    <script src="vendor/js/js.js"></script>    
+    <script src="../../vendor/js/js.js"></script>    
   </body>
 
 </html>
