--- a/Animationcollege/Assignment2/assignment2.html
+++ b/Animationcollege/Assignment2/assignment2.html
@@ -28,7 +28,7 @@
 
             <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top light-navbar-fixed-top">
                     <div class="container-fluid">
-                      <a class="navbar-brand" href="../../index.html">Home</a>
+                      <a class="navbar-brand" href="../animationcollege.html">Home</a>
                       <button class="navbar-toggler custom-toggler-light" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon custom-toggler-light"></span>
                       </button>
