--- a/Animationcollege/animationcollege.html
+++ b/Animationcollege/animationcollege.html
@@ -185,7 +185,7 @@
           <!-- CARD FREECODECAMP -->
         <div class="col-lg-4 col-sm-6 portfolio-item">
           <div class="card h-100">
-            <a href="assignment4.html"><img class="card-img-top hvr-float " src="Front Page Assignments/assignment-4-card-image.png" alt=""></a>
+            <a href="Assignment4/assignment4.html"><img class="card-img-top hvr-float " src="Front Page Assignments/assignment-4-card-image.png" alt=""></a>
             <div class="card-body">
               <h4 class="card-title">
                 <a href="#">Assignment 4</a>
@@ -202,7 +202,7 @@
           <!-- CARD NEW WORLD -->
         <div class="col-lg-4 col-sm-6 portfolio-item">
           <div class="card h-100">
-            <a href="assignment5.html"><img class="card-img-top hvr-float " src="Front Page Assignments/assignment-5-card-image.png" alt=""></a>
+            <a href="Assignment5/assignment5.html"><img class="card-img-top hvr-float " src="Front Page Assignments/assignment-5-card-image.png" alt=""></a>
             <div class="card-body">
               <h4 class="card-title">
                 <a href="#">Assignment 5</a>
